# week3ML

./: 02_numerical_pipeline_ex_00.ipynb  02_numerical_pipeline_ex_01.ipynb  M1.01.ipynb  README.md  pyproject.toml
notebooks/: M1.01.ipynb  M1.02.ipynb  M1.03.ipynb  M1.04.ipynb  M1.05.ipynb  M2.01.ipynb  cross_validation_M7.01.ipynb  cross_validation_ex_02.ipynb  metrics_ex_M7.03.ipynb  parameter_tuning_M3.01.ipynb  parameter_tuning_M3.02.ipynb
