[project]
name = "Week3-MachineLearning
version = "0.1.0"
description = " ML exercises"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Luluh Almogbil" }
]

dependencies = [
  "pandas>=2.3.0",
  "numpy>=2.0.0",
  "scikit-learn>=1.5.0",
  "jupyterlab>=4.2.0",
  "ipykernel>=6.29.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
]